# fast-robots

./: .gitignore  BENCHMARK.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/actions/setup-rust/: action.yml
.github/workflows/: qc.yml  release-plz.yml
benches/: robots.rs
examples/: profile.rs
src/: lib.rs  main.rs
