[package]
name = "fast-robots"
version = "0.1.3"
edition = "2024"
rust-version = "1.85.1"
license = "MIT OR Apache-2.0"
description = "A zero-copy robots.txt parser with SIMD-accelerated byte scanning."
repository = "https://github.com/zeon256/fast-robots"
documentation = "https://docs.rs/fast-robots"
readme = "README.md"
keywords = ["robots", "robots-txt", "parser", "simd", "crawler"]
categories = ["parser-implementations", "command-line-utilities"]

[features]
default = ["extensions"]
extensions = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
argh = "0.1.19"
memchr = "2.8.0"
thiserror = "2.0.17"

[dev-dependencies]
criterion = "0.7.0"
flate2 = "1.1.5"
mimalloc = "0.1.48"
robotstxt = "0.3.0"
sha2 = "0.10.9"
ureq = "3.1.4"

[[bench]]
name = "robots"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.flamegraph]
inherits = "release"
debug = true
strip = "none"

[profile.bench]
inherits = "release"
debug = true
strip = "none"
